--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,16 @@ JWT_SECRET=change_me
 AWS_REGION=ap-south-1
 AWS_ACCESS_KEY=
 AWS_SECRET_KEY=
+
+
+# CockroachDB Serverless
+DB_USER=your_username
+DB_PASSWORD=your_password
+DB_HOST=your-cluster.cockroachlabs.cloud:26257
+DB_NAME=hypershop
+PORT=3333
+GIN_MODE=debug
+JWT_SECRET=change_me
+AWS_REGION=ap-south-1
+AWS_ACCESS_KEY=
+AWS_SECRET_KEY=
