--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,3 @@
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/
-DB_NAME=hypershop
 PORT=3333
 GIN_MODE=debug
 JWT_SECRET=change_me
@@ -8,14 +6,13 @@ AWS_ACCESS_KEY=
 AWS_SECRET_KEY=
 
 
-# CockroachDB Serverless
+DB_NAME=hypershop
+#mongodb -nosql
+MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/
+
+#postgres-sql
 DB_USER=your_username
 DB_PASSWORD=your_password
-DB_HOST=your-cluster.cockroachlabs.cloud:26257
-DB_NAME=hypershop
-PORT=3333
-GIN_MODE=debug
-JWT_SECRET=change_me
-AWS_REGION=ap-south-1
-AWS_ACCESS_KEY=
-AWS_SECRET_KEY=
+DB_HOST=your_host:5432
+
+
