--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,15 @@ DB_NAME=hypershop
 MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/
 
 #postgres-sql
-DB_USER=your_username
-DB_PASSWORD=your_password
-DB_HOST=your_host:5432
+# DB_USER=your_username
+# DB_PASSWORD=your_password
+# DB_HOST=your_host:5432
+
+#tidb
+DB_USER=wo_lamba_sa_user_jo_tidb_dega (e.g., 2Agp3...)
+DB_PASSWORD=your_tidb_password
+DB_HOST=gateway01.ap-southeast-1.prod.aws.tidbcloud.com
+DB_PORT=4000
+DB_NAME=hypershop
 
 
