--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,10 @@ MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/
 # DB_PASSWORD=your_password
 # DB_HOST=your_host:5432
 
+#turso
+TURSO_TOKEN=your turso toke
+TURSO_URL=url
+
 #tidb
 DB_USER=wo_lamba_sa_user_jo_tidb_dega (e.g., 2Agp3...)
 DB_PASSWORD=your_tidb_password
