changed to amd64

--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Build Go Lambda binary (linux)
         run: |
           export GOOS=linux
-          export GOARCH=arm64
+          export GOARCH=amd64
           export CGO_ENABLED=0
           go build -trimpath -ldflags "-s -w" -o bootstrap ./cmd/lambda
 
